--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags (for previews on Twitter, Facebook, etc.) -->
     <meta property="og:title" content="CUM INSIDE ME NOW👉🔞🔥👈">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://i.postimg.cc/yYWhJ2Lw/Screenshot-20250502-015747-1.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/0ND6rFyn/HENTAI-25.jpg">
     <meta property="og:type" content="website">
 
     <!-- Meta Refresh Redirect -->
